--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
       <p style="margin:0 0 8px 0;font-size:13px">Main sekejap — santai. Tekan butang untuk buka Fruit Slice fullscreen.</p>
       <div style="display:flex;gap:8px;flex-wrap:wrap">
         <button id="openFruitGame" class="cta">🍉 Fruit Slice</button>
+         <button id="openBalloonGame" class="cta">🎈 Letup Belon</button>
+</section>
       </div>
     </section>
 
