--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Zurich Info Portal | Dibangunkan oleh BroChat 💪</p>
+    <p>© 2025 AZA Zurich Takaful Ejen| Dibangunkan oleh Bro💪</p>
   </footer>
 
   <script src="script.js"></script>
