--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="wrap">
     <header class="topcard">
       <!-- Put path to your logo here (replace 'logo-zurich.svg' if needed) -->
-      <img class="logo" src="logo-zurich.svg" alt="Zurich Logo (replace path if needed)" />
+      <img class="logo" src="zurich_logo_takaful.png" alt="Zurich Logo (replace path if needed)" />
       <div>
         <h1>☕ Selamat Datang ke AZA Zurich Takaful AM</h1>
         <div class="lead">Info produk Zurich, waktu solat, cuaca, kuiz & mini games</div>
