--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">AZA</div>
+        <div class="logo">AZA</div> src="./public/zurich_logo_takaful.png
         <div>
           <h1>AZA Zurich Takaful AM</h1>
           <p class="lead">Waktu solat, produk & hiburan ringan — semua di satu app</p>
