--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="brand">
-        <div class="logo">AZA</div> src="./public/zurich_logo_takaful.png
-        <div>
-          <h1>AZA Zurich Takaful AM</h1>
-          <p class="lead">Waktu solat, produk & hiburan ringan — semua di satu app</p>
-        </div>
-      </div>
-      <div class="inline-row">
-        <button id="openGamesBtn" class="ghost">🎮 Lite Games</button>
-        <button id="openQuizBtn" class="ghost">🧠 Kuiz</button>
-      </div>
-    </header>
+  <div class="brand">
+    <img src="./public/zurich_logo_takaful.png" alt="Zurich Takaful Logo" class="logo" />
+    <div>
+      <h1>AZA Zurich Takaful AM</h1>
+      <p class="lead">Waktu solat, produk & hiburan ringan — semua di satu app</p>
+    </div>
+  </div>
+  <div class="inline-row">
+    <button id="openGamesBtn" class="ghost">🎮 Lite Games</button>
+    <button id="openQuizBtn" class="ghost">🧠 Kuiz</button>
+  </div>
+</header>
 
     <!-- ===== Waktu Solat & Cuaca ===== -->
     <section id="waktuCard" class="card">
