--- a/index.html
+++ b/index.html
@@ -796,6 +796,7 @@ document.addEventListener('DOMContentLoaded', () => {
   console.info('AZA Zurich app initialized — Fruit Slice & Balloon Pop wired.');
 });
 </script>
+  <script src="script.js" defer></script>
 </body>
 </html>
 
