--- a/index.html
+++ b/index.html
@@ -797,6 +797,9 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
   <script src="script.js" defer></script>
+  <!-- ✅ Tambah dua ni kat sini, sebelum </body> -->
+  <script src="./fruitgame.js"></script>
+  <script src="./balloongame.js"></script>
 </body>
 </html>
 
