--- a/index.html
+++ b/index.html
@@ -153,12 +153,7 @@
     <button class="btn-switch" onclick="showGame('fruit')">🍉 Fruit Slice</button>
     <button class="btn-switch" onclick="showGame('balloon')">🎈 Balloon Pop</button>
   </div>
-
-  <div id="fruit-game" class="game-area">
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-  </div>
-
-  <div id="balloon-game" class="game-area" style="display:none; position:relative; width:400px; height:400px; background:#222; overflow:hidden; border-radius:12px;"></div>
+<div id="fruit-game" class="game-area" style="display:none;"></div>
       </section>
 
 
