Fix HTML structure for balloon game div

--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
     <button class="btn-switch" onclick="showGame('balloon')">🎈 Balloon Pop</button>
   </div>
 <div id="fruit-game" class="game-area" style="display:none;"></div>
+        <div id="balloon-game" class="game-area"
+     style="display:none;></div>
       </section>
 
 
