--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <button class="btn-switch" onclick="showGame('fruit')">🍉 Fruit Slice</button>
     <button class="btn-switch" onclick="showGame('balloon')">🎈 Balloon Pop</button>
   </div>
-<div id="fruit-game" class="game-area" style="display:none;"></div>
-        <div id="balloon-game" class="game-area"
+<div id="fruit-game" class="game-area" style="display:none;"
+        div id="balloon-game" class="game-area"
      style="display:none;></div>
       </section>
 
