Fix HTML structure for game areas

--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
     <button class="btn-switch" onclick="showGame('fruit')">🍉 Fruit Slice</button>
     <button class="btn-switch" onclick="showGame('balloon')">🎈 Balloon Pop</button>
   </div>
-<div id="fruit-game" class="game-area" style="display:none;"
-        div id="balloon-game" class="game-area"
-     style="display:none;></div>
+<div id="fruit-game" class="game-area" style="display:none;"></div>
+      <div id="balloon-game" class="game-area"
+     style="display:none; position:relative; width:400px; height:400px; background:#222; overflow:hidden; border-radius:12px;">
+</div>  
       </section>
 
 
