--- a/index.html
+++ b/index.html
@@ -148,10 +148,8 @@
 
       <section id="lite-games" class="section">
   <h2>🎮 Lite Games</h2>
-
-  <div class="game-switch">
-    <button class="btn-switch" onclick="showGame('fruit')">🍉 Fruit Slice</button>
-    <button class="btn-switch" onclick="showGame('balloon')">🎈 Balloon Pop</button>
+<button class="btn-switch" onclick="openFruitModal()">🍉 Fruit Slice</button>
+<button class="btn-switch" onclick="openBalloonModal()">🎈 Balloon Pop</button>
   </div>
 <div id="fruit-game" class="game-area" style="display:none;"></div>
       <div id="balloon-game" class="game-area"
