--- a/index.html
+++ b/index.html
@@ -143,18 +143,15 @@
         </div>
       </div>
     </section>
-
-    <!-- ===== Lite Games Launcher (still page scrollable) ===== -->
-
-      <section id="lite-games" class="section">
+!-- ===== Lite Games Launcher (Final Fixed Version) ===== -->
+<section id="lite-games" class="section">
   <h2>🎮 Lite Games</h2>
-<button class="btn-switch" onclick="openFruitModal()">🍉 Fruit Slice</button>
-<button class="btn-switch" onclick="openBalloonModal()">🎈 Balloon Pop</button>
+
+  <div class="game-switch">
+    <!-- Tukar showGame → openFruitModal / openBalloonModal -->
+    <button class="btn-switch" onclick="openFruitModal()">🍉 Fruit Slice</button>
+    <button class="btn-switch" onclick="openBalloonModal()">🎈 Balloon Pop</button>
   </div>
-<div id="fruit-game" class="game-area" style="display:none;"></div>
-      <div id="balloon-game" class="game-area"
-     style="display:none; position:relative; width:400px; height:400px; background:#222; overflow:hidden; border-radius:12px;">
-</div>  
       </section>
 
 
