--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
       </div>
     </section>
-!-- ===== Lite Games Launcher (Final Fixed Version) ===== -->
+//!-- ===== Lite Games Launcher (Final Fixed Version) ===== -->//
 <section id="lite-games" class="section">
   <h2>🎮 Lite Games</h2>
 
